chapter13/01-verify-istio/ism-app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ism-app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - ism-app-gateway
  http:
  - route:
    - destination:
        host: ism-app
        port:
          number: 8080
